--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "stream-line-wrapper": "^0.1.1",
     "tmp": "^0.0.33",
+    "uuid": "^3.1.0",
     "whereis": "^0.4.0"
   }
 }
